--- a/css/styles.css
+++ b/css/styles.css
@@ -165,11 +165,7 @@ footer p {
 .logo img {
     padding: 10px 0px;
 }
-.user-icon {
-    max-height: 40px;
-}
-
-.cart-icon {
+.user-icon, .cart-icon, .instagram-icon {
     max-height: 40px;
 }
 
@@ -180,10 +176,6 @@ footer p {
 .facebook-icon {
     max-height: 40px;
     margin-right: 10px;
-}
-
-.instagram-icon {
-    max-height: 40px;
 }
 
 
@@ -212,20 +204,17 @@ footer p {
 
 .hero-text {
 color: #B06100;
--webkit-text-stroke: 1px black;    
+-webkit-text-stroke: 1px black;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;    
 }
 
 .hero-image {
     background-image: url("../images/alt.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
-}
-
-.hero-text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 .hero-text h1 {
@@ -291,11 +280,9 @@ color: #B06100;
 .movie {
     display: flex;
     flex-direction: column;
-}
-
-.movie {
     align-items: center;
 }
+
 
 .movie p {
     font-size: 20px;
@@ -313,6 +300,10 @@ color: #B06100;
     max-width: 250px;
     min-width: 160px;
     width: 100%;
+}
+
+.movie img:hover {
+    border: 4px solid black;
 }
 
 
