--- a/css/styles.css
+++ b/css/styles.css
@@ -44,10 +44,6 @@ main {
     margin-bottom: 50px;
 }
 
-input::placeholder {
-    margin-left: 10px;
-}
-
 
 /*HEADER*/
 
@@ -371,6 +367,20 @@ justify-content: center;
     margin-top: -38px;
 }
 
+
+/*TOY STORY PRODUCT PAGE*/
+
+.toystory-hero {
+    background-image: url("../images/toystory_hero.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    position: static;
+    min-height: 789px;
+    margin-top: -38px;
+}
+
+/*ALL PRODUCTS*/
+
 .product-container {
     position: relative ;
     top: 15rem;
@@ -432,8 +442,7 @@ position: relative;
     margin-bottom: 50px;
     display: grid;
     grid-template-columns: 1fr 1fr; 
-    gap: 10px;
-    
+    gap: 10px;   
 }
 
 .star-rate {
@@ -482,64 +491,6 @@ position: relative;
     text-align: center;
 }
 
-/*TOY STORY PRODUCT PAGE*/
-
-.toystory-hero {
-    background-image: url("../images/toystory_hero.png");
-    background-size: 100%;
-    background-repeat: no-repeat;
-    position: static;
-    min-height: 789px;
-    margin-top: -38px;
-}
-
-.product-container {
-    position: relative ;
-    z-index: 9;
-    top: 15rem;
-}
-
-.floated {
-    float: left;
-    margin-right: 20px;
-    border: 3px solid #FFFCF6;
-}
-
-.product-container--text {
-    position: relative;
-    top: 220px;
-}
-
-.product-container--text p {
-    max-width: 1200px;
-}
-
-.product-container--text h1 {
-font-size: 36px;
-}
-
-.product-container--text h2 {
-    font-size: 48px;
-    margin: 0px 80px 0px 0px;
-}
-
-.product-container--text h3 {
-border: 3px solid black;
-margin: 0;
-}
-
-.film-info {
-    background: linear-gradient(180deg, #D9D9D9 0%, rgba(217, 217, 217, 0) 100%);
-    margin-bottom: 50px;
-    display: grid;
-    grid-template-columns: 1fr 1fr; 
-    gap: 10px;
-    
-}
-
-#recommendations h4 {
-    text-align: center;
-}
 
 /*CART*/
 
@@ -594,6 +545,10 @@ margin: 0;
 
 #quantity1, #quantity2 {
     text-align: center;
+}
+
+input:focus::placeholder{
+    color: transparent;
 }
 
 .remove-product {
