--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,35 @@ main {
 }
 
 
+/*****ERROR MESSAGE*****/
+
+.error {
+    border: 1px solid darkred;
+    padding: 1rem;
+    color: darkred;
+    background: rgba(255, 0, 0, 0.1);
+}
+
+.loading-indicator {
+    display: none;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-top: 4px solid #3498db;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 /*HEADER*/
 
 .header-section {
@@ -239,7 +268,7 @@ justify-content: center;
 /*Toy Story Add*/
 
 .add-container {
-    background-image: url("../images/toystory-advert2.png");
+    background-image: url("../images/avengers-advert2-min.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
     z-index: 0;
@@ -262,11 +291,10 @@ justify-content: center;
 /*Best Sellers*/
 
 .movie-row {
-    display: flex;
-    justify-content: space-between;
-    gap: 15px;
-    padding: 15px;
-    margin-bottom: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    justify-items: center;
 }
 
 .movie-row ::-webkit-scrollbar {
@@ -292,10 +320,17 @@ justify-content: center;
     text-align: center;
 }
 
-.movie img {
-    max-width: 250px;
-    min-width: 160px;
+.moviesImage {
     width: 100%;
+    max-width: 250px;
+    max-height: 356px;
+}
+
+.movie img {
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    object-fit: cover;
 }
 
 .movie img:hover {
@@ -356,89 +391,124 @@ justify-content: center;
     margin-bottom: 50px;
 }
 
-/*GODZILLA PRODUCT PAGE*/
-
-.godzilla-hero {
-    background-image: url("../images/godzilla_hero.png");
-    background-size: 100%;
-    background-repeat: no-repeat;
-    position: static;
-    min-height: 789px;
-    margin-top: -38px;
-}
-
-
-/*TOY STORY PRODUCT PAGE*/
-
-.toystory-hero {
-    background-image: url("../images/toystory_hero.png");
-    background-size: 100%;
-    background-repeat: no-repeat;
-    position: static;
-    min-height: 789px;
-    margin-top: -38px;
-}
 
 /*ALL PRODUCTS*/
 
-.product-container {
-    position: relative ;
+/* .movie-hero {
+    background-image: url("../images/godzilla_hero.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    position: relative;
+    min-height: 789px;
+    margin-top: -38px;
+    z-index: -999;
+} */
+
+.movie-hero{
+    height: 660px;
+    position: relative;
+    background: linear-gradient(-175deg, transparent 50%, #FFFCF6 50%); 
+}
+
+.movie-hero::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #111a22;
+/*     background: url('../images/3for2_Advertisement.png') center/cover; */
+    z-index: -1;
+    transform: skewY(0deg);
+    transform-origin: 0;
+}
+
+.movieImage img {
+    width: 100%;
+    max-width: 440px;
+    border: 5px solid #FFFCF6;
+}
+
+/* .product-container {
+    position: absolute ;
     top: 15rem;
 }
-
-.hidden-img-small {
+ */
+/* .hidden-img-small {
     display: none;
-}
+} */
 
-.floated {
+/* .floated {
     border: 3px solid #FFFCF6;
-}
+} */
 
-.floated, .floated-prize {
+/* .floated, .floated-prize {
     float: left;
     margin-right: 20px;
-}
+} */
 
-.product-container-text {
+/* .product-container-text {
     position: relative;
     top: 220px;
+} */
+
+/* .product-container-text p {
+    max-width: 1200px;
+} */
+
+.product-container {
+    position: absolute;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 20px;
+    margin-bottom: 50px;
+    z-index: 1;
+    top: 12rem;    
 }
 
-.product-container-text p {
-    max-width: 1200px;
+.movieImage {
+    margin: 20px;
 }
+
+.product-container.reset-position {
+    position: static;
+}
+
+.movieInfo {
+    display: flex;
+    flex-direction: column;
+    margin-top: auto;
+}
+
+.movieInfo h1 {
+    font-size: clamp(24px, 4vw, 48px);
+}
+
+.movieInfo h1, .movieInfo h2 {
+    margin: 10px;
+} 
 
 .product-container-text h1 {
 font-size: 36px;
 }
 
-.product-container-text h2 {
+/* .product-container-text h2 {
     font-size: 48px;
     margin: 0px 80px 0px 0px;
-}
+} */
 
-.product-container--text h3 {
+/* .product-container--text h3 {
 border: 3px solid black;
 margin: 0;
-}
+} */
 
 .add-to-cart-button {
-    margin-bottom: 50px;
+    margin: 20px;
+    margin-bottom: 100px;
     padding: 10px 50px;
     border-radius: 10px;
     border: 2px solid black;
-}
-
-.infopics {
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 80px;
-}
-
-.infopics img {
-max-width: 45%;
-padding: 10px;
-position: relative;
 }
 
 .film-info {
@@ -446,20 +516,16 @@ position: relative;
     margin-bottom: 50px;
     display: grid;
     grid-template-columns: 1fr 1fr; 
-    gap: 10px;   
+    gap: 10px; 
+    margin-top: 150px;
 }
 
 .star-rate {
     display: flex;
 }
 
-.star_icon, .tomato_icon {
+.star_icon {
     height: 50px;
-}
-
-.tomato-rating {
-    display: flex;
-    align-items: center;
 }
 
 .recommendations {
@@ -484,6 +550,8 @@ position: relative;
 .recommendations img {
     width: 100%;
     max-width: clamp(60px, 12vw, 220px);
+    height: 100%;
+    max-height: 100%;
     border: 3px solid #223241;
 }
 
@@ -919,21 +987,13 @@ input[type='radio']{
 
 /*Product Page, Godzilla*/
 
-.godzilla-hero, .toystory-hero {
+/* .godzilla-hero, .toystory-hero {
     background-size: 200vmin;
     background-position: top;
     min-height: 100px;
     margin-top: -10px;
-}
+} */
 
-.floated img {
-    width: 40vw;
-    margin-left: 20px;
-}
-
-.product-container {
-    top: 3rem;
-}
 
 .product-container-text {
     display: flex;
@@ -1115,6 +1175,22 @@ footer a {
 .g4 {
     flex-basis: 40%;
 }
+
+.product-container {
+    grid-template-columns: 1fr;   
+    place-items: center;
+}
+
+.film-info {
+    grid-template-columns: 1fr;
+    margin-top: 440px;
+}
+
+/* .movieInfo{
+    display: grid;
+    grid-template-columns: 1fr 1fr;   
+} */
+
 
 /*Checkout*/
 
@@ -1330,7 +1406,12 @@ footer a {
 /*Product Page*/
 
 .film-info {
-    grid-template-columns: 1fr;
+    margin-top: 180px;
+}
+
+.movieImage img {
+    max-width: 300px;
+    border: 2px solid #FFFCF6;
 }
 
 .star_icon, .tomato_icon {
