--- a/css/imports/checkout-success.css
+++ b/css/imports/checkout-success.css
@@ -6,6 +6,10 @@
   gap: 10px;
 }
 
+.check-success1 {
+  text-align: center;
+}
+
 .check-success1, .check-success2 {
   background-color: #a9a4a4;
   max-width: 500px;
@@ -31,6 +35,7 @@
   display: flex;
   justify-content: center;
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .back-to-store-button img {
