--- a/css/imports/checkout.css
+++ b/css/imports/checkout.css
@@ -8,23 +8,53 @@
   display: flex;
   flex: 1;
   justify-content: space-around;
+  max-width: 1200px;
+  margin: 0 auto;
+  gap: 40px;
 }
 
-.check1 {
+.payment {
+  flex: 1;
+  margin: 0px 10px;
+}
+
+.personal-information h2, .payment h2 {
+  font-size: 28px;
+}
+
+.payment-invoice h3, .payment-vipps h3, .payment-card h3 {
+  font-size: 24px;
+  text-align: center;
+}
+
+
+.personal-information .payment-content-wrap {
+  display: flex;
+  gap: 30px;
+  max-width: 1200px;
+  margin: 0 auto;
+  flex: 1;
+}
+
+.payment-content-wrap {
+  display: flex;
+  flex: 1;
+}
+
+.payment-card {
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 540px;
 }
 
-.check1 h3 {
+.payment-card h3 {
   margin-left: 10px;
   margin-bottom: 10px;
 }
 
 .card-form {
   background: linear-gradient(180deg, #D9D9D9 0%, rgba(217, 217, 217, 0) 100%);
-  margin: 10px;
+  margin-bottom: 40px;
 }
 
 .card-form form {
@@ -62,57 +92,62 @@
 }
 
 .purchase-button {
-  border: 2px solid black;
-  border-radius: 10px;
-  margin-top: 0px;
+  margin-top: 20px;
   padding: 10px 100px;
 }
 
-#purchase-button {
+.purchase-buttons {
   display: flex;
   justify-content: center;
 }
 
-.check2 {
-  background-color: #D9D9D9;
-  width: 100%;
-  max-width: 540px;
-  flex-grow: inherit;
-  border: 2px solid black;
-  margin: 10px;
-}
-
-.your-order {
-  padding: 10px;
-}
-
-.check2 h3 {
-  margin: 10px 0px 0px 10px;
-}
-
-.your-order h5 {
-  margin-left: 10px;
-  padding: 10px;
-}
-
-.checkout-product {
-  background-color: #FBFAFA;
-}
-
-.checkout-product img {
-  max-width: 71px;
-  float: left;
-  margin: 0px 20px 20px 20px;
-}
-
-.clearfix::after {
-  clear: both;
-  content: "";
-  display: table;
-}
-
-.check3 {
+.your-information {
+  background: linear-gradient(180deg, #D9D9D9 0%, rgba(217, 217, 217, 0) 100%);
+  border: 3px solid black;
   display: flex;
-  justify-content: space-evenly;
-  line-height: 16px;
+  flex-direction: column;
+  line-height: 10px;
+}
+
+.your-information p {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+
+.how-to-pay div {
+  margin-bottom: 20px;
+  font-size: 24px;
+  margin-top: 8px;
+}
+
+input[type='radio']{
+  transform: scale(2);
+  margin-left: 20px;
+  margin-top: -1px;
+  vertical-align: middle;
+}
+
+.how-to-pay {
+  background: linear-gradient(180deg, #D9D9D9 0%, rgba(217, 217, 217, 0) 100%);
+  border: 3px solid black;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 60px;
+}
+
+.personal-information {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+
+.vipps-logo {
+  display: flex;
+  justify-content: center;
+}
+
+.vipps-image {
+  border-radius: 10px;
+  max-width: 50px;
 }
