--- a/css/imports/global.css
+++ b/css/imports/global.css
@@ -1,223 +1,285 @@
 * {
-  box-sizing: border-box;
-  }
-  
-  html {
-      scroll-behavior: smooth;
-      scroll-padding: 110px;
-  }
-  
-  /*BODY*/
-  
-  Body{
-      background-color: #FFFCF6;
-      margin: 0;
-      font-family: 'century Gothic', Arial, Helvetica, sans-serif;
-  }
-  p {
-      font-family: 'Lora', Arial, Helvetica, sans-serif;  
-  }
-  
-  h1 {
-      font-size: 48px;
-  }
-  h2 {
-      font-size: 36px;
-  }
-  h3 {
-      font-size: 30px;
-  }
-  p {
-      font-size: 24px;
-  }
-  
-  .your-information p {
-      font-size: 24px;
-  }
-  
-  .content-wrap {
-      max-width: 1200px;
-      margin: 0 auto;
-  }
-  
-  main {
-      margin-bottom: 50px;
-  }
-  
-  
-  /*****ERROR MESSAGE*****/
-  
-  .error {
-      border: 1px solid darkred;
-      padding: 1rem;
-      color: darkred;
-      background: rgba(255, 0, 0, 0.1);
-  }
-  
-  .loading-indicator {
-      display: none;
-      text-align: center;
-      margin-top: 20px;
-  }
-  
-  .spinner {
-      border: 4px solid rgba(0, 0, 0, 0.1);
-      border-top: 4px solid #3498db;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      animation: spin 1s linear infinite;
-  }
-  
-  @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-  }
-  
-  /*HEADER*/
-  
-  .header-section {
-      background-color: #223241;
-      position: sticky;
-      top: 0px;
-      z-index: 10;
-  }
-  
-  header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-  }
-  
-  #hamburger, .hamburger-icon {
-      display: none;
-  }
-  
-  .nav-hidden {
-      display: none;
-  }
-  
-  .h-links {
-      display: flex;
-      gap: 80px;
-  }
-  
-  .search {
-      height: 36px;
-      width: 240px;
-      border-radius: 30px;
-  }
-  
-  #searchlabel1, #searchlabel2, #q1, #q2 {
-      display: none;
-  }
-  
-  header nav a {
-      padding: 10px;
-      color: #FFF;
-      text-decoration: none;
-      font-size: 30px;
-      align-self: center;
-  }
-  
-  nav a:hover {
-      text-decoration: underline;
-  }
-  
-  .active {
-      color: #F28501;
-      font-weight: 700;
-  }
-  
-  .header-icons {
-      display: flex;
-      gap: 40px;
-  }
-  
-  
-  /*FOOTER*/
-  footer {
-      background-color: #223241;
-      color: #FFF;
-      padding: 20px;
-      margin: 0 auto;
-  }
-  
-  footer a {
-      color: #FFF;
-      text-decoration: none;
-      padding: 10px;
-      font-size: 30px;
-  }
-  
-  .footer-links a:hover {
-      text-decoration: underline;
-  }
-  
-  footer p {
-      margin-bottom: 0;
-      font-size: 14px;
-  }
-  
-  .footer-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-  }
-  
-  .footer-logo img {
-      max-width: 100%;
-      min-width: 120px;
-      padding-right: 20px;
-  }
-  
-  .footer-links{
-      display: flex;
-      gap: 80px;
-  }
-  
-  .footer-icons img:hover {
-      max-height: 50px;
-  }
-  
-  
-  /*ICONS*/
-  
-  .logo {
-      max-height: 100px;
-  }
-  
-  .logo img {
-      padding: 10px 0px;
-  }
-  .user-icon, .cart-icon, .instagram-icon {
-      max-height: 40px;
-  }
-  
-  .cart-icon:hover {
-      max-height: 50px;
-  }
-  
-  .facebook-icon {
-      max-height: 40px;
-      margin-right: 10px;
-  }
-  
-  
-  /*LINKS*/
-  .cta {
-      background-color: #F28501;
-      display: inline-block;
-      padding: 5px 20px;
-      color: black;
-      text-transform: uppercase;
-      text-decoration: none;
-      border-radius: 25px;
-      border: 3px solid white;
-      white-space: nowrap;
-      text-align: center;
-  }
-  
-  .small-view-button {
-      text-transform: none; 
-  }
+box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+    scroll-padding: 110px;
+    height: 100%;
+}
+
+/*BODY*/
+
+Body{
+    background-color: #FFFCF6;
+    margin: 0;
+    font-family: 'century Gothic', Arial, Helvetica, sans-serif;
+    min-height: 100vh;
+}
+p {
+    font-family: 'Lora', Arial, Helvetica, sans-serif;  
+}
+
+h1 {
+    font-size: 48px;
+}
+h2 {
+    font-size: 36px;
+}
+h3 {
+    font-size: 30px;
+}
+p {
+    font-size: 24px;
+}
+
+.your-information p {
+    font-size: 24px;
+}
+
+.content-wrap {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+main {
+    margin-bottom: 50px;
+    flex: 1;
+}
+
+
+/*****ERROR MESSAGE*****/
+
+.error {
+    border: 1px solid darkred;
+    padding: 1rem;
+    color: darkred;
+    background: rgba(255, 0, 0, 0.1);
+}
+
+.loading-indicator {
+    display: none;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-top: 4px solid #3498db;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+/*HEADER*/
+
+.header-section {
+    background-color: #223241;
+    position: sticky;
+    top: 0px;
+    z-index: 1000;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#hamburger, .hamburger-icon {
+    display: none;
+}
+
+.nav-hidden {
+    display: none;
+}
+
+.h-links {
+    display: flex;
+    gap: 20px;
+}
+
+.search {
+    height: 36px;
+    width: 200px;
+    border-radius: 30px;
+}
+
+#searchlabel1, #searchlabel2, #q1, #q2 {
+    display: none;
+}
+
+header nav a {
+    padding: 10px;
+    color: #FFF;
+    text-decoration: none;
+    font-size: 30px;
+    align-self: center;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
+
+.active {
+    color: #F28501;
+    font-weight: 700;
+}
+
+.header-icons {
+    display: flex;
+    gap: 40px;
+}
+
+
+/*FOOTER*/
+footer {
+    background-color: #223241;
+    color: #FFF;
+    padding: 20px;
+    margin: 0 auto;
+    position: sticky;
+    top: 100%;
+}
+
+footer a {
+    color: #FFF;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 30px;
+}
+
+.footer-links a:hover {
+    text-decoration: underline;
+}
+
+footer p {
+    margin-bottom: 0;
+    font-size: 14px;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-logo img {
+    max-width: 100%;
+    min-width: 120px;
+    padding-right: 20px;
+}
+
+.footer-links{
+    display: flex;
+    gap: 80px;
+}
+
+.footer-icons img:hover {
+    max-height: 50px;
+}
+
+
+/*ICONS*/
+
+.logo {
+    max-height: 100px;
+}
+
+.logo img {
+    padding: 10px 0px;
+}
+.user-icon, .cart-icon, .instagram-icon, .facebook-icon {
+    height: 40px;
+    transition: transform 0.3s ease;
+}
+
+.cart-icon:hover, .back-to-store-button img:hover{
+    transform: scale(1.1);
+}
+
+.back-to-store-button img {
+    transition: transform 0.3s ease;
+}
+
+.facebook-icon:hover, .instagram-icon:hover {
+    transform: scale(1.2);
+}
+
+.facebook-icon {
+    margin-right: 10px;
+}
+
+/*LINKS*/
+.cta {
+    background: linear-gradient(to bottom, #F28501, #E07000);
+    display: inline-block;
+    padding: 10px 20px;
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    border-radius: 25px;
+    border: 2px solid transparent;
+    white-space: nowrap;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    transition: box-shadow 0.3s, color 0.3s, border 0.3s;
+    cursor: pointer;
+}
+
+.cta::before {
+    content: '';
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    right: 6px;
+    bottom: 6px;
+    background: linear-gradient(to bottom, #E07000, #F28501);
+    border-radius: 20px;
+    z-index: -1;
+}
+
+.cta:hover {
+    background: linear-gradient(to bottom, #FFFFFF, #F28501);
+    color: black;
+    border: 2px solid #F28501;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.cta:hover::before {
+    background: linear-gradient(to bottom, #F28501, #E07000);
+}
+
+#cartItemCount {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
+    text-align: center;
+    border: 2px solid #F28501;
+    border-radius: 50%;
+    color: #F28501;
+    font-weight: bold;
+    position: relative;
+    top: -5px;
+}
+
+#backToLastPage {
+    text-decoration: none;
+    font-size: 20px;
+    color: #F28501;
+}
+
+.form-error {
+    color: red;
+    display: none;
+    text-align: left;
+}
